--- a/src/assets/stylesheets/application/modal.scss
+++ b/src/assets/stylesheets/application/modal.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: scroll;
 
   .modal {
     min-width: 558px;
